# lidl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.adoc  Versions.adoc  rpc.adoc
.github/workflows/: lidlc.yml  main.yml
docs/: types.adoc
eval/: CMakeLists.txt  eval.cpp  evaluation.cpp  expression.cpp  literals.cpp  relational_expressions.cpp  value.cpp
eval/include/lidl/: eval.hpp
eval/include/lidl/eval/: evaluation.hpp  expression.hpp  literals.hpp  relational_expressions.hpp  value.hpp
eval/include/lidl/eval/detail/: expression_common.hpp
examples/: CMakeLists.txt  caps.yaml  caps_generated.hpp  compile.yaml  enums.yaml  generic_example.cpp  generics.yaml  lidl.yaml  lidl_example.cpp  lidl_generated.hpp  python.cpp  service.cpp  service.lidl  service.yaml  service_generated.hpp  std.lidl  strings.cpp  strings.yaml  tests.lidl  tests.yaml  tests_example.cpp  union.cpp  union.yaml  vec3f.lidl  vec3f.yaml  vec3f_example.cpp  vec3f_generated.hpp
examples/rust/strings/: Cargo.toml
examples/rust/strings/src/: main.rs
include/lidl/: algorithm.hpp  attributes.hpp  base.hpp  basic.hpp  basic_types.hpp  binary_writer.hpp  enumeration.hpp  error.hpp  errors.hpp  generics.hpp  identifier.hpp  inheritance.hpp  layout.hpp  loader.hpp  member.hpp  module.hpp  module_meta.hpp  queue.hpp  scope.hpp  service.hpp  source_info.hpp  structure.hpp  symbol_table.hpp  types.hpp  union.hpp  view_types.hpp  wire.hpp  yaml.hpp
include/lidl/types/: pointer.hpp
include/proto/: attributes.hpp  basic.hpp  types.hpp  yaml.hpp
runtime/cpp/: CMakeLists.txt  lidlc.cmake
runtime/cpp/include/lidl/: array.hpp  buffer.hpp  builder.hpp  lib.hpp  lidl.hpp  meta.hpp  ptr.hpp  service.hpp  status.hpp  string.hpp  structure.hpp  union.hpp  vector.hpp
runtime/cpp/include/lidlrt/: array.hpp  builder.hpp  lidl.hpp  ptr.hpp  service.hpp
runtime/cpp/include/tos/: span.hpp  task.hpp
runtime/js/: lidl.ts  package-lock.json  package.json  tsconfig.json
runtime/js/lib/: Array.ts  BasicTypes.ts  MessageBuilder.ts  Object.ts  Pointer.ts  String.ts  Structure.ts  Vector.ts
runtime/js/test/: BasicTypesTest.ts  PointerTest.ts  StringTest.ts
runtime/python/: test.py
runtime/python/lidlrt/: __init__.py  array.py  basic_types.py  buffer.py  builder.py  compound_type.py  detail.py  enum.py  pointer.py  service.py  string.py  udp_client.py  vector.py
runtime/rust/: Cargo.toml
runtime/rust/src/: lib.rs  main.rs  message_builder.rs  pointer.rs  string.rs  vector.rs
runtime/rust/src/lidl/: mod.rs  string.rs
src/: CMakeLists.txt  attributes.cpp  base.cpp  basic_types.cpp  bin2yaml.cpp  bin2yaml_test.cpp  cppgen.cpp  enumeration.cpp  generics.cpp  inheritance.cpp  instantiation_pass.cpp  layout.cpp  layout_test.cpp  loader.cpp  main.cpp  module.cpp  module_test.cpp  name.cpp  passes.hpp  reference_type_pass.cpp  reference_type_pass_test.cpp  scope.cpp  scope_test.cpp  service.cpp  service_pass.cpp  structure.cpp  symbol_table.cpp  types.cpp  union.cpp  union_enum_pass.cpp  yaml.cpp  yaml.hpp  yaml2bin_test.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.hpp  emitter.cpp  emitter.hpp  emitter_test.cpp  generator.hpp  generator_base.hpp  sections.cpp  sections.hpp
src/cppgen/: CMakeLists.txt  cppgen.cpp  cppgen.hpp  emitter.cpp  emitter.hpp  emitter_test.cpp  enum_gen.cpp  enum_gen.hpp  generator.cpp  generator.hpp  generator_base.hpp  generic_gen.cpp  generic_gen.hpp  get_identifier.cpp  get_identifier_test.cpp  raw_union_gen.cpp  raw_union_gen.hpp  readme.adoc  service_gen.cpp  service_stub_gen.cpp  service_stub_gen.hpp  struct_bodygen.cpp  struct_bodygen.hpp  struct_bodygen_test.cpp  struct_gen.cpp  struct_gen.hpp  union_gen.cpp  union_gen.hpp
src/frontend/: CMakeLists.txt  ast.hpp  frontend.cpp  generator.hpp  lexer.cpp  lexer.hpp  loader.cpp  parser.cpp  parser.hpp  parser2.cpp
src/jsgen/: CMakeLists.txt  enum_gen.cpp  enum_gen.hpp  generator.hpp  get_identifier.cpp  get_identifier.hpp  get_identifier_test.cpp  jsgen.cpp  jsgen.hpp  struct_gen.cpp  struct_gen.hpp  union_gen.cpp  union_gen.hpp
src/lidlpy/: CMakeLists.txt  lidlpy.cpp
src/pybindgen/: CMakeLists.txt  pybind.cpp  pybind.hpp  pybindgen.cpp
src/pybindgen/template/: CMakeLists.txt
src/pygen/: CMakeLists.txt  get_identifier.cpp  get_identifier.hpp  pygen.cpp
src/tools/: CMakeLists.txt  bin2yaml_main.cpp  lidlc_main.cpp  lidlq_main.cpp  yaml2lidl_main.cpp
